--- a/Furnigo/nbproject/private/private.properties
+++ b/Furnigo/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+browser.id=Chrome
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
 index.file=index.php
-url=http://localhost/Furnigo/
+run.as=LOCAL
+url=http://127.0.0.1:8080/TPI/Furnigo/
